--- a/Packets.yml
+++ b/Packets.yml
@@ -12,3 +12,12 @@ packets:
       source       : server
       packet       : "Packets/PSO2PacketDamage.yml"
       description  : Damage Info Packet
+
+    - type         : 0x31
+      subtype      : 0x05
+      source       : server
+      packet       : "Packets/PSO2TitlePacket.yml"
+      flags        : 0x0400
+      sub          : 0x92
+      xor          : 0x57E6
+      description  : Packed Title List packet from the Title NPC
