--- a/Packets.yml
+++ b/Packets.yml
@@ -16,7 +16,7 @@ packets:
     - type         : 0x31
       subtype      : 0x05
       source       : server
-      packet       : "Packets/PSO2TitlePacket.yml"
+      packet       : "Packets/PSO2PacketPackedString.yml"
       flags        : 0x0400
       sub          : 0x92
       xor          : 0x57E6
