--- a/Packets/PSO2PacketPackedString.yml
+++ b/Packets/PSO2PacketPackedString.yml
@@ -1,25 +1,32 @@
 packet:
-    - ItemCount:
-        type: UInt32
-        subxor: true
-        description: Number of IDs in the packet
-    - ItemIDs:
-        type: UInt32[ItemCount]
-        align: 4
-        description: Array of IDs
-    - CharacterCount:
-        type: UInt32
-        subxor: true
-        description: Number of wide characters in the upcoming section, includes a null terminator but does not include 0x0000 added at the end for padding
-    - Characters:
-        type: WChar[CharacterCount]
-        align: 4
-        description: All characters (Unicode LE) in the packed string, there's a null terminator only at the end of the last string, must be aligned to 4 bytes
-    - ItemLengthsCount:
-        type: UInt32
-        subxor: true
-        description: Number of item lengths in the upcoming section (should be same as ItemCount), does not account for padding characters
-    - ItemLengths:
-        type: Byte[ItemLengthsCount]
-        align: 4
-        description: Array of character count lengths (# of WCHARs per string), aligned to 4 bytes
+  members:
+    -
+      name: ItemCount
+      type: UInt32
+      subxor: true
+      description: Number of IDs in the packet
+    -
+      name: ItemIDs
+      type: UInt32[ItemCount]
+      align: 4
+      description: Array of IDs
+    -
+      name: CharacterCount
+      type: UInt32
+      subxor: true
+      description: Number of wide characters in the upcoming section, includes a null terminator but does not include 0x0000 added at the end for padding
+    -
+      name: Characters
+      type: Char16[CharacterCount]
+      align: 4
+      description: All characters (Unicode LE) in the packed string, there's a null terminator only at the end of the last string, must be aligned to 4 bytes
+    -
+      name: ItemLengthsCount
+      type: UInt32
+      subxor: true
+      description: Number of item lengths in the upcoming section (should be same as ItemCount), does not account for padding characters
+    -
+      name: ItemLengths
+      type: UInt8[ItemLengthsCount]
+      align: 4
+      description: Array of character count lengths (# of characters per string), aligned to 4 bytes
