--- a/Packets/PSO2PacketPackedString.yml
+++ b/Packets/PSO2PacketPackedString.yml
@@ -1,32 +1,31 @@
 packet:
   members:
-    -
-      name: ItemCount
+    - name: ItemCount
       type: UInt32
       subxor: true
       description: Number of IDs in the packet
-    -
-      name: ItemIDs
+      
+    - name: ItemIDs
       type: UInt32[ItemCount]
       align: 4
       description: Array of IDs
-    -
-      name: CharacterCount
+
+    - name: CharacterCount
       type: UInt32
       subxor: true
       description: Number of wide characters in the upcoming section, includes a null terminator but does not include 0x0000 added at the end for padding
-    -
-      name: Characters
+
+    - name: Characters
       type: Char16[CharacterCount]
       align: 4
       description: All characters (Unicode LE) in the packed string, there's a null terminator only at the end of the last string, must be aligned to 4 bytes
-    -
-      name: ItemLengthsCount
+
+    - name: ItemLengthsCount
       type: UInt32
       subxor: true
       description: Number of item lengths in the upcoming section (should be same as ItemCount), does not account for padding characters
-    -
-      name: ItemLengths
+
+    - name: ItemLengths
       type: UInt8[ItemLengthsCount]
       align: 4
       description: Array of character count lengths (# of characters per string), aligned to 4 bytes
